--- a/i3/config
+++ b/i3/config
@@ -224,6 +224,14 @@ bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute 1 toggle # mute s
 bindsym XF86AudioPlay exec playerctl play-pause
 
 # Autostart
-exec --no-startup-id pidgin
-exec --no-startup-id thunderbird
+# populate default workspaces
+exec clementine
+exec pidgin
+exec thunderbird
+exec --no-startup-id i3-msg 'workspace $workspace3; exec keepassx; exec sleep 1; workspace $workspace2'
+exec --no-startup-id i3-msg 'exec i3-sensible-terminal; workspace $workspace1'
+exec firefox
+exec --no-startup-id i3-msg 'workspace $workspace6'
+exec --no-startup-id i3-msg 'workspace $workspace1'
+# background tasks
 exec --no-startup-id synology-cloud-station-drive
