--- a/i3/config
+++ b/i3/config
@@ -31,8 +31,7 @@ floating_modifier $mod
 
 # lock
 #bindsym $mod+Shift+x exec i3lock --color 475263
-bindsym $mod+Shift+x exec ~/.i3/lock.sh
-
+bindsym $mod+Shift+x exec ~/.i3/lock/lock.sh
 # start a terminal
 bindsym $mod+Return exec i3-sensible-terminal
 
@@ -97,7 +96,7 @@ bindsym $mod+a focus parent
 #bindsym $mod+d focus child
 
 # workspace aliases
-set $workspace1 "1 "
+set $workspace1 "1 "
 set $workspace2 "2 "
 set $workspace3 "3 "
 set $workspace4 4
@@ -105,7 +104,7 @@ set $workspace5 5
 set $workspace6 "6 "
 set $workspace7 "7 "
 set $workspace8 "8 "
-set $workspace9 9
+set $workspace9 "9 "
 set $workspace10 10 
 
 # switch to workspace
@@ -149,6 +148,7 @@ assign [title="KeePassX"] $workspace3
 assign [class="Thunderbird"] $workspace6
 assign [class="Pidgin"] $workspace7
 assign [class="Clementine"] $workspace8
+assign [title="rdesktop - win"] $workspace9
 
 # reload the configuration file
 bindsym $mod+Shift+c reload
