changed wallpaper path

--- a/i3/config
+++ b/i3/config
@@ -105,7 +105,7 @@ set $workspace6 "6 "
 set $workspace7 "7 "
 set $workspace8 "8 "
 set $workspace9 "9 "
-set $workspace10 10 
+set $workspace10 10
 
 # switch to workspace
 bindsym $mod+1 workspace $workspace1
@@ -213,7 +213,7 @@ client.focused_inactive $inactive-bg-color $inactive-bg-color $inactive-text-col
 client.urgent $urgent-bg-color $urgent-bg-color $text-color #00ff00
 
 # wallpaper
-exec_always --no-startup-id feh --bg-scale ~/Firefox_wallpaper.png
+exec_always --no-startup-id feh --bg-scale ~/.i3/wallpaper.png
 
 # Pulse Audio controls
 bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume 1 +5% #increase sound volume
