--- a/i3/i3blocks.conf
+++ b/i3/i3blocks.conf
@@ -75,6 +75,15 @@ label=HOME
 #instance=/mnt/data
 interval=30
 
+# Network interface monitoring
+#
+# If the instance is not specified, use the interface used for default route.
+# The address can be forced to IPv4 or IPv6 with -4 or -6 switches.
+[iface]
+#instance=wlan0
+color=#00FF00
+interval=10
+
 # CPU usage
 #
 # The script may be called with -w and -c switches to specify thresholds,
@@ -92,6 +101,15 @@ interval=10
 [time]
 command=date '+%Y-%m-%d %H:%M:%S'
 interval=5
+
+# Battery indicator
+#
+# The battery instance defaults to 0.
+[battery]
+label=BAT
+#label=⚡
+#instance=1
+interval=30
 
 # OpenVPN support
 #
