--- a/i3/i3blocks.conf
+++ b/i3/i3blocks.conf
@@ -84,6 +84,9 @@ interval=30
 color=#00FF00
 interval=10
 
+[iface -6]
+color=#00FFFF
+interval=10
 # CPU usage
 #
 # The script may be called with -w and -c switches to specify thresholds,
