--- a/i3/config
+++ b/i3/config
@@ -34,7 +34,7 @@ floating_modifier $mod
 #bindsym $mod+Shift+x exec ~/.i3/lock/lock.sh
 bindsym $mod+Shift+x exec xautolock -locknow
 # start a terminal
-bindsym $mod+Return exec i3-sensible-terminal
+bindsym $mod+Return exec xterm
 
 # kill focused window
 bindsym $mod+Shift+q kill
@@ -225,6 +225,8 @@ bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute 1 toggle # mute s
 bindsym XF86AudioPlay exec playerctl play-pause
 
 # Autostart
+# load ~/.Xresources
+exec_always --no-startup-id xrdb ~/.Xresources
 # background tasks
 exec --no-startup-id synology-cloud-station-drive
 exec --no-startup-id xautolock -time 10 -locker ~/.i3/lock/lock.sh
