--- a/i3/config
+++ b/i3/config
@@ -13,11 +13,11 @@ set $mod Mod4
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-#font pango:Source Code Pro 11
+font pango:Source Code Pro 11
 
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
-font pango:DejaVu Sans Mono 10
+#font pango:DejaVu Sans Mono 10
 
 # Before i3 v4.8, we used to recommend this one as the default:
 # font -misc-fixed-medium-r-normal--13-120-75-75-C-70-iso10646-1
@@ -30,8 +30,6 @@ font pango:DejaVu Sans Mono 10
 floating_modifier $mod
 
 # lock
-#bindsym $mod+Shift+x exec i3lock --color 475263
-#bindsym $mod+Shift+x exec ~/.i3/lock/lock.sh
 bindsym $mod+Shift+x exec xautolock -locknow
 # start a terminal
 bindsym $mod+Return exec xterm
@@ -145,11 +143,8 @@ workspace $workspace9 output HDMI3
 workspace $workspace10 output HDMI3
 
 # force windows to workspaces
-#assign [title="KeePassX"] $workspace3
 assign [class="Thunderbird"] $workspace6
 assign [class="Pidgin"] $workspace7
-assign [class="Clementine"] $workspace8
-assign [title="rdesktop - win"] $workspace9
 
 # reload the configuration file
 bindsym $mod+Shift+c reload
@@ -229,4 +224,4 @@ bindsym XF86AudioPlay exec playerctl play-pause
 exec_always --no-startup-id xrdb ~/.Xresources
 # background tasks
 exec --no-startup-id synology-cloud-station-drive
-exec --no-startup-id xautolock -time 10 -locker ~/.i3/lock/lock.sh
+exec --no-startup-id xautolock -secure -time 10 -locker ~/.i3/lock/lock.sh
