--- a/i3/config
+++ b/i3/config
@@ -42,7 +42,8 @@ bindsym $mod+Shift+q kill
 # There also is the (new) i3-dmenu-desktop which only displays applications
 # shipping a .desktop file. It is a wrapper around dmenu, so you need that
 # installed.
-bindsym $mod+d exec --no-startup-id i3-dmenu-desktop
+bindsym $mod+d exec --no-startup-id i3-dmenu-desktop --dmenu="dmenu -b -i -nb \
+'#2f343f' -nf '#f3f4f5' -sb '#676e7d' -fn 'Source Code Pro-11'"
 
 # change focus
 bindsym $mod+j focus left
