--- a/i3/config
+++ b/i3/config
@@ -11,9 +11,14 @@
 
 set $mod Mod4
 
+# Variables to set fonts (used for i3 itself, i3bar and dmenu)
+set $text-font Source Code Pro
+set $icon-font Font Awesome
+set $font-size 11
+
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango:Source Code Pro 11
+font pango:$text-font $font-size
 
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
@@ -43,7 +48,7 @@ bindsym $mod+Shift+q kill
 # shipping a .desktop file. It is a wrapper around dmenu, so you need that
 # installed.
 bindsym $mod+d exec --no-startup-id i3-dmenu-desktop --dmenu="dmenu -b -i -nb \
-'#2f343f' -nf '#f3f4f5' -sb '#676e7d' -fn 'Source Code Pro-11'"
+'$bg-color' -nf '$text-color' -sb '$inactive-text-color' -fn '$text-font-$font-size'"
 
 # change focus
 bindsym $mod+j focus left
@@ -187,7 +192,7 @@ bar {
         tray_output primary
         separator_symbol 
         strip_workspace_numbers yes
-        font pango:Source Code Pro, Font Awesome 11
+        font pango:$text-font, $icon-font $font-size
 	colors {
 		background $bg-color
 	    	separator #757575
