vim: Added vimtex plugin

--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "vim/vim/bundle/vim-go"]
 	path = vim/vim/bundle/vim-go
 	url = https://github.com/fatih/vim-go.git
+[submodule "vim/vim/bundle/vimtex"]
+	path = vim/vim/bundle/vimtex
+	url = https://github.com/lervag/vimtex.git
