ansible: Moved to more fine granular roles

--- a/playbooks/docker.yml
+++ b/playbooks/docker.yml
@@ -3,4 +3,8 @@
   - hosts: localhost
     roles:
       - common
-      - private
+      - git_work
+      - go
+      - gpg      
+      - python
+      - zsh
