ansible: added fasd to zsh setup procedure

--- a/playbooks/roles/zsh/tasks/main.yml
+++ b/playbooks/roles/zsh/tasks/main.yml
@@ -13,6 +13,13 @@
     repo: https://github.com/folixg/gimme-ohmyzsh-plugin
     dest: ~/.oh-my-zsh/custom/plugins/gimme
 
+- name: Link fasd into ~/bin
+  file:
+    src: ~/dot-files/zsh/fasd
+    dest: ~/bin/fasd
+    state: link
+    force: yes
+  
 - name: Link ~/.zshrc
   file:
     src: ~/dot-files/zsh/zshrc
