Flattened repository hierarchy
Setup scripts still need updating

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,12 +1,12 @@
-[submodule "vim/vim/bundle/syntastic"]
-	path = vim/vim/bundle/syntastic
+[submodule "vim/bundle/syntastic"]
+	path = vim/bundle/syntastic
 	url = https://github.com/vim-syntastic/syntastic.git
-[submodule "vim/vim/bundle/vim-sensible"]
-	path = vim/vim/bundle/vim-sensible
-	url = https://github.com/tpope/vim-sensible.git
-[submodule "vim/vim/bundle/vim-go"]
-	path = vim/vim/bundle/vim-go
-	url = https://github.com/fatih/vim-go.git
-[submodule "vim/vim/bundle/vimtex"]
-	path = vim/vim/bundle/vimtex
+[submodule "vim/bundle/vimtex"]
+	path = vim/bundle/vimtex
 	url = https://github.com/lervag/vimtex.git
+[submodule "vim/bundle/vim-go"]
+	path = vim/bundle/vim-go
+	url = https://github.com/fatih/vim-go.git
+[submodule "vim/bundle/vim-sensible"]
+	path = vim/bundle/vim-sensible
+	url = https://github.com/tpope/vim-sensible.git
