Ansible: adapted to flattened hierarchy

--- a/install/playbooks/roles/common/tasks/main.yml
+++ b/install/playbooks/roles/common/tasks/main.yml
@@ -19,33 +19,16 @@
     path: ~/bin
     state: directory
 
-- name: Setup vim
+- name: Link config files
   file:
-    src: ~/dot-files/vim/{{ item }}
+    src: ~/dot-files/{{ item }}
     dest: ~/.{{ item }}
     state: link
     force: yes
   with_items:
     - vim
     - vimrc
+    - bashrc
+    - bash_aliases
+    - gitignore
 
-- name: Link ~/.bashrc
-  file:
-    src: ~/dot-files/bash/bashrc
-    dest: ~/.bashrc
-    state: link
-    force: yes
-      
-- name: Link ~/.bash_aliases
-  file:
-    src: ~/dot-files/bash/bash_aliases
-    dest: ~/.bash_aliases
-    state: link
-    force: yes
-
-- name: Link global .gitignore
-  file:
-    src: ~/dot-files/git/global.gitignore
-    dest: ~/.gitignore
-    state: link
-    force: yes
