Finished transition to flat repository
* Removed individual setup scripts
* Added a bash script for configuration without root privileges
* Added ansible playbooks for installation with root privileges
* Adapted all links to flat hierarchy
* Made private.gitconfig the default .gitconfig

--- a/install/playbooks/roles/git_private/tasks/main.yml
+++ b/install/playbooks/roles/git_private/tasks/main.yml
@@ -1,6 +1,6 @@
 - name: Link gitconfig
   file:
-    src: ~/dot-files/private.gitconfig
+    src: ~/dot-files/gitconfig
     dest: ~/.gitconfig
     state: link
     force: yes
