--- a/i3/i3blocks.conf
+++ b/i3/i3blocks.conf
@@ -34,9 +34,10 @@ markup=none
 # This displays "ARTIST - SONG" if a music is playing.
 # Supported players are: spotify, vlc, audacious, xmms2, mplayer, and others.
 [mediaplayer]
+command=$HOME/.i3/blocklets/mediaplayer
 interval=5
 signal=10
-label=
+#label=
 
 # Volume indicator
 #
