zsh: Use custom theme

--- a/install/ansible/roles/zsh/tasks/main.yml
+++ b/install/ansible/roles/zsh/tasks/main.yml
@@ -14,6 +14,11 @@
     repo: https://github.com/folixg/gimme-ohmyzsh-plugin
     dest: ~/.oh-my-zsh/custom/plugins/gimme
 
+- name: Download custom theme
+  get_url:
+    url:  https://raw.githubusercontent.com/folixg/kinda-fishy-theme/master/kinda-fishy.zsh-theme
+    dest: ~/.oh-my-zsh/themes/kinda-fishy.zsh-theme 
+
 - name: Link fasd into ~/bin
   file:
     src: ~/dot-files/scripts/fasd
