i3: added shortcut for suspend

--- a/i3/config
+++ b/i3/config
@@ -36,6 +36,8 @@ floating_modifier $mod
 
 # lock
 bindsym $mod+Shift+x exec ~/.i3/lock/xautolock_wrapper.sh
+# suspend
+bindsym $mod+Shift+y exec ~/.i3/lock/xautolock_wrapper.sh && systemctl suspend
 # start a terminal
 bindsym $mod+Return exec xterm
 
