i3: add wifi information to bar

--- a/i3/i3blocks.conf
+++ b/i3/i3blocks.conf
@@ -46,6 +46,13 @@ command=$HOME/.i3/blocklets/volume-pulseaudio -F 3
 interval=once
 signal=11
 
+# Show signal strength of wifi connection
+[wifi]
+command=$HOME/.i3/blocklets/wifi
+instance=wlp3s0
+label=
+interval=10
+
 # Network interface monitoring
 #
 # If the instance is not specified, use the interface used for default route.
