--- a/install/ansible/roles/go/tasks/main.yml
+++ b/install/ansible/roles/go/tasks/main.yml
@@ -1,9 +1,5 @@
-- name: Fetch gimme
-  get_url:
-    url: https://raw.githubusercontent.com/travis-ci/gimme/master/gimme
-    dest: ~/bin/gimme
-    mode: 0755
-
-- name: Install go using gimme
-  shell: GIMME_GO_VERSION=1.8.1 ~/bin/gimme
-
+- name: Install go 1.9.1
+  unarchive:
+    src: https://storage.googleapis.com/golang/go1.9.1.linux-amd64.tar.gz
+    dest: /usr/local
+    remote_src: yes
