--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ install:
   - pip install ansible
 
 script:
+  - cd install/ansible
   # perform syntax checks
   - ansible-playbook -i inventory docker.yml --syntax-check
   - ansible-playbook -i inventory desktop.yml --syntax-check
