--- a/i3/config
+++ b/i3/config
@@ -35,9 +35,9 @@ font pango:$text-font $font-size
 floating_modifier $mod
 
 # lock
-bindsym $mod+Shift+x exec ~/.i3/lock/lock.sh
+bindsym $mod+Shift+x exec ~/.i3/scripts/lock.sh
 # suspend
-bindsym $mod+Shift+y exec ~/.i3/lock/lock.sh --suspend
+bindsym $mod+Shift+y exec ~/.i3/scripts/lock.sh --suspend
 # start a terminal
 bindsym $mod+Return exec xterm
 
@@ -159,7 +159,7 @@ bindsym $mod+Shift+c reload
 # restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
 bindsym $mod+Shift+r restart
 # exit i3 (logs you out of your X session)
-bindsym $mod+Shift+e exec "~/.i3/exit_dmenu.sh"
+bindsym $mod+Shift+e exec "~/.i3/scripts/exit_dmenu.sh"
 
 # resize window (you can also use the mouse for that)
 mode "resize" {
@@ -224,15 +224,15 @@ bindsym XF86AudioLowerVolume exec amixer -q -D pulse sset Master 5%- && pkill -R
 bindsym XF86AudioMute exec amixer -q -D pulse sset Master toggle && pkill -RTMIN+11
 
 # Media player controls
-bindsym XF86AudioPlay exec playerctl play-pause
+bindsym XF86AudioPlay exec ~/.i3/scripts/playpause.sh
 
 # Autostart
 # load ~/.Xresources
 exec_always --no-startup-id xrdb ~/.Xresources
 # wallpaper
-exec_always --no-startup-id feh --bg-scale ~/.i3/wallpaper.png
+exec_always --no-startup-id feh --bg-scale ~/.i3/images/wallpaper.png
 # dunst for notifications
 exec --no-startup-id dunst -config ~/.i3/dunstrc
 # background tasks
 exec --no-startup-id synology-cloud-station-drive
-exec --no-startup-id xautolock -time 10 -detectsleep -locker ~/.i3/lock/lock.sh
+exec --no-startup-id xautolock -time 10 -detectsleep -locker ~/.i3/scripts/lock.sh
