--- a/i3/i3blocks.conf
+++ b/i3/i3blocks.conf
@@ -29,26 +29,22 @@ separator=true
 separator_block_width=30
 markup=none
 
-# Generic media player support
+# Show currently playing (or paused) music
 #
-# This displays "ARTIST - SONG" if a music is playing.
-# Supported players are: spotify, vlc, audacious, xmms2, mplayer, and others.
-[mediaplayer]
-command=$HOME/.i3/blocklets/mediaplayer
+[nowplaying]
+command=$HOME/.i3/scripts/nowplaying
 interval=5
-signal=10
-#label=
 
 # Volume indicator
 #
 [volume-pulseaudio]
-command=$HOME/.i3/blocklets/volume-pulseaudio -F 3
+command=$HOME/.i3/scripts/volume-pulseaudio -F 3
 interval=once
 signal=11
 
 # Show signal strength of wifi connection
 [wifi]
-command=$HOME/.i3/blocklets/wifi
+command=$HOME/.i3/scripts/wifi
 instance=wlp3s0
 label=
 interval=10
@@ -65,7 +61,7 @@ interval=10
 #
 # Support multiple VPN, with colors.
 [openvpn]
-command=$HOME/.i3/blocklets/openvpn
+command=$HOME/.i3/scripts/openvpn
 interval=20
 
 # Memory usage
@@ -102,7 +98,7 @@ interval=10
 #
 # The battery instance defaults to 0.
 [battery]
-command=$HOME/.i3/blocklets/battery
+command=$HOME/.i3/scripts/battery
 markup=pango
 interval=30
 
