i3: add mouse controls to musicplayer blocklet

--- a/i3/i3blocks.conf
+++ b/i3/i3blocks.conf
@@ -31,8 +31,8 @@ markup=none
 
 # Show currently playing (or paused) music
 #
-[nowplaying]
-command=$HOME/.i3/scripts/nowplaying
+[musicplayer]
+command=$HOME/.i3/scripts/musicplayer
 interval=5
 
 # Volume indicator
