--- a/.gitmodules
+++ b/.gitmodules
@@ -28,3 +28,6 @@
 [submodule "vim/bundle/jedi-vim"]
 	path = vim/bundle/jedi-vim
 	url = https://github.com/davidhalter/jedi-vim.git
+[submodule "vim/bundle/vim-highlightedyank"]
+	path = vim/bundle/vim-highlightedyank
+	url = https://github.com/machakann/vim-highlightedyank
