--- a/.gitmodules
+++ b/.gitmodules
@@ -31,3 +31,6 @@
 [submodule "vim/bundle/vim-highlightedyank"]
 	path = vim/bundle/vim-highlightedyank
 	url = https://github.com/machakann/vim-highlightedyank
+[submodule "vim/bundle/VOoM"]
+	path = vim/bundle/VOoM
+	url = https://github.com/vim-voom/VOoM.git
