--- a/install/ansible/roles/common/tasks/main.yml
+++ b/install/ansible/roles/common/tasks/main.yml
@@ -11,6 +11,7 @@
   become: true
   with_items:
     - vim
+    - exuberant-ctags
     - curl
     - wget
     - shellcheck
@@ -42,4 +43,5 @@
     - profile
     - gitignore
     - tmux.conf
+    - ctags
 
