i3: Shorter format for date and time in i3bar.

--- a/i3/i3blocks.conf
+++ b/i3/i3blocks.conf
@@ -105,10 +105,10 @@ interval=30
 # Date Time
 #
 [time]
-command=LC_ALL=de_DE.utf8 date '+%A, %d.%m.%y'
+command=date '+%d.%m.%y'
 label=
 interval=360
 [time]
-command=date '+%H:%M:%S'
+command=date '+%H:%M'
 label=
 interval=5
