Docker: reduce layers by chaining RUN statements.

--- a/install/docker/Dockerfile
+++ b/install/docker/Dockerfile
@@ -12,28 +12,24 @@ LABEL org.label-schema.build-date=$BUILD_DATE \
 
 # install ansible
 RUN apt-get update \
-&& apt-get install -y software-properties-common \
-&& apt-add-repository -y ppa:ansible/ansible \
-&& apt-get update \
-&& apt-get install -y ansible git sudo
+    && apt-get install -y software-properties-common \
+    && apt-add-repository -y ppa:ansible/ansible \
+    && apt-get update \
+    && apt-get install -y ansible git sudo
 
 # create user
-RUN useradd --create-home --shell /usr/bin/zsh folix
-RUN adduser folix sudo
-RUN echo "folix ALL=(ALL) NOPASSWD:ALL" | tee -a /etc/sudoers
+RUN useradd --create-home --shell /usr/bin/zsh folix \
+    && adduser folix sudo \
+    && echo "folix ALL=(ALL) NOPASSWD:ALL" | tee -a /etc/sudoers
 USER folix
 
 # installation using ansible
-RUN git clone https://github.com/folixg/dot-files.git /home/folix/dot-files 
-RUN cd /home/folix/dot-files/install/ansible \
-    && ansible-playbook -i inventory docker.yml
+RUN git clone https://github.com/folixg/dot-files.git /home/folix/dot-files \ 
+    && cd /home/folix/dot-files/install/ansible \
+    && ansible-playbook -i inventory docker.yml \
+    && sudo rm -rf /var/lib/apt/lists/*
 
-# cleanup
-USER root
-RUN apt-get clean && rm -rf /var/lib/apt/lists/*
-
-# switch user
-USER folix
+# cd to user home
 WORKDIR /home/folix
 
 # start zsh
