--- a/i3/config
+++ b/i3/config
@@ -44,13 +44,13 @@ bindsym $mod+Return exec xterm
 # kill focused window
 bindsym $mod+Shift+q kill
 
-# start dmenu (a program launcher)
-# bindsym $mod+d exec dmenu_run
-# There also is the (new) i3-dmenu-desktop which only displays applications
-# shipping a .desktop file. It is a wrapper around dmenu, so you need that
-# installed.
+# start i3-dmenu-desktop
 bindsym $mod+d exec --no-startup-id i3-dmenu-desktop --dmenu="dmenu -b -i -nb \
 '$bg-color' -nf '$text-color' -sb '$inactive-text-color' -fn '$text-font-$font-size'"
+
+# start dmenu_run
+bindsym $mod+Shift+d exec --no-startup-id dmenu_run -b -i -nb '$bg-color' -nf \
+'$text-color' -sb '$inactive-text-color' -fn '$text-font-$font-size'
 
 # change focus
 bindsym $mod+h focus left
