--- a/i3/config
+++ b/i3/config
@@ -7,8 +7,10 @@ set $mod Mod1
 set $bg-color 	         #243443
 set $inactive-bg-color   #243443
 set $text-color          #f8f8f2
-set $inactive-text-color #888882
+set $inactive-text-color #92928c
 set $urgent-bg-color     #5c98cd
+set $indicator-color     #e6db74
+set $bar-bg-color        #2b3e50
 
 # Variables to set fonts (used for i3 itself, i3bar and dmenu)
 set $text-font Source Code Pro
@@ -36,10 +38,10 @@ bindsym $mod+Shift+q kill
 
 # start i3-dmenu-desktop
 bindsym $mod+d exec --no-startup-id i3-dmenu-desktop --dmenu="dmenu -b -i -nb \
-'$bg-color' -nf '$text-color' -sb '$urgent-bg-color' -fn '$text-font-$font-size'"
+'$bar-bg-color' -nf '$text-color' -sb '$urgent-bg-color' -fn '$text-font-$font-size'"
 
 # start dmenu_run
-bindsym $mod+Shift+d exec --no-startup-id dmenu_run -b -i -nb '$bg-color' -nf \
+bindsym $mod+Shift+d exec --no-startup-id dmenu_run -b -i -nb '$bar-bg-color' -nf \
 '$text-color' -sb '$urgent-bg-color' -fn '$text-font-$font-size'
 
 # change focus
@@ -101,9 +103,9 @@ bindsym $mod+m scratchpad show
 # workspace aliases
 set $workspace1 "1 "
 set $workspace2 "2 "
-set $workspace3 "3 "
+set $workspace3 "3 "
 set $workspace4 "4 "
-set $workspace5 "5 "
+set $workspace5 "5 "
 set $workspace6 "6 "
 set $workspace7 "7 "
 set $workspace8 "8 "
@@ -199,25 +201,27 @@ bindsym $mod+r mode "resize"
 # finds out, if available)
 bar {
         status_command i3blocks -c ~/.i3/i3blocks.conf
-        separator_symbol 
+        separator_symbol "┊" 
         strip_workspace_numbers yes
         font pango:$text-font, $icon-font $font-size
 	colors {
-		background $bg-color
-	    	separator #757575
-		#                  border             background         text
-		focused_workspace  $bg-color          $bg-color          $text-color
-		inactive_workspace $inactive-bg-color $inactive-bg-color $inactive-text-color
-		urgent_workspace   $urgent-bg-color   $urgent-bg-color   $text-color
+		background $bar-bg-color
+                statusline $text-color
+	    	separator  $text-color
+		#                  border         background         text
+		focused_workspace  $bar-bg-color  $bar-bg-color      $text-color
+		active_workspace   $bar-bg-color  $bar-bg-color      $inactive-text-color
+		inactive_workspace $bar-bg-color  $bar-bg-color      $inactive-text-color
+		urgent_workspace   $bar-bg-color  $urgent-bg-color   $text-color
 }
 }
 
 # window colors
 #                       border              background         text                 indicator
-client.focused          $bg-color           $bg-color          $text-color          #00ff00
-client.unfocused        $inactive-bg-color  $inactive-bg-color $inactive-text-color #00ff00
-client.focused_inactive $inactive-bg-color  $inactive-bg-color $inactive-text-color #00ff00
-client.urgent           $urgent-bg-color    $urgent-bg-color   $text-color          #00ff00
+client.focused          $bg-color           $bg-color          $text-color          $indicator-color
+client.unfocused        $inactive-bg-color  $inactive-bg-color $inactive-text-color $indicator-color
+client.focused_inactive $inactive-bg-color  $inactive-bg-color $inactive-text-color $indicator-color
+client.urgent           $urgent-bg-color    $urgent-bg-color   $text-color          $indicator-color
 
 # change volume or toggle mute
 bindsym XF86AudioRaiseVolume exec amixer -q -D pulse sset Master 5%+ && pkill -RTMIN+11 i3blocks
