--- a/i3/config
+++ b/i3/config
@@ -200,7 +200,7 @@ bindsym $mod+r mode "resize"
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
-        status_command i3blocks -c ~/.i3/i3blocks.conf
+        status_command ~/.i3/scripts/spotify-status.sh
         separator_symbol "┊" 
         strip_workspace_numbers yes
         font pango:$text-font, $icon-font $font-size
@@ -229,7 +229,10 @@ bindsym XF86AudioLowerVolume exec amixer -q -D pulse sset Master 5%- && pkill -R
 bindsym XF86AudioMute exec amixer -q -D pulse sset Master toggle && pkill -RTMIN+11
 
 # Media player controls
-bindsym XF86AudioPlay exec ~/.i3/scripts/playpause.sh
+bindsym XF86AudioPlay exec dbus-send --print-reply \
+                              --dest=org.mpris.MediaPlayer2.spotify \
+                              /org/mpris/MediaPlayer2 \
+                              org.mpris.MediaPlayer2.Player.PlayPause
 
 # Screenshots
 bindsym --release Print exec --no-startup-id scrot -m '/tmp/%Y%m%d-%H%M%S_scrot.png'
