--- a/install/ansible/roles/i3/tasks/main.yml
+++ b/install/ansible/roles/i3/tasks/main.yml
@@ -5,15 +5,10 @@
   become: true
   with_items:
     - i3
-    - i3blocks
+    - dunst
     - feh
     - xautolock
     - scrot
-
-- name: Install playerctl
-  apt:
-    deb: https://github.com/acrisci/playerctl/releases/download/v0.5.0/playerctl-0.5.0_amd64.deb
-  become: true
 
 - name: Link i3 config
   file:
