--- a/install/ansible/roles/xserver/tasks/main.yml
+++ b/install/ansible/roles/xserver/tasks/main.yml
@@ -5,6 +5,13 @@
     state: link
     force: yes
 
+- name: Link gvimrc
+  file:
+    src: ~/dot-files/gvimrc
+    dest: ~/.gvimrc
+    state: link
+    force: yes
+
 - name: Create user fonts dir
   file:
     path: ~/.local/share/fonts
