--- a/tmux.conf
+++ b/tmux.conf
@@ -1,4 +1,4 @@
-set -g default-terminal "tmux-256color"
+set -g default-terminal "screen-256color"
 
 set -g pane-base-index 1
 set -g display-panes-time 2000
