--- a/config/Code/User/settings.json
+++ b/config/Code/User/settings.json
@@ -7,7 +7,6 @@
     "workbench.colorTheme": "Lucario",
     "editor.multiCursorModifier": "ctrlCmd",
     "editor.fontFamily": "'Source Code Pro','Droid Sans Mono', 'monospace', monospace, 'Droid Sans Fallback'",
-    "editor.tabSize": 2,
     "editor.accessibilitySupport": "off",
     "editor.renderControlCharacters": true,
     "editor.showFoldingControls": "always",
@@ -26,5 +25,13 @@
     "update.enableWindowsBackgroundUpdates": false,
     "python.autoComplete.addBrackets": true,
     "python.pythonPath": "python3",
-    "python.venvPath": "~/.virtualenvs"
+    "python.venvPath": "~/.virtualenvs",
+    "python.formatting.provider": "black",
+    "vim.foldfix": true,
+    "vim.hlsearch": true,
+    "vim.leader": " ",
+    "vim.handleKeys": {
+        "<C-k>": false
+    },
+    "vim.useSystemClipboard": true,
 }
