--- a/tmux.conf
+++ b/tmux.conf
@@ -16,3 +16,5 @@ set -g status-fg colour7
 
 set -g pane-active-border-style fg=colour3
 set -g pane-border-style fg=colour4
+
+set -g status-right '#h'
