vscode: update config
- show line numbers and status bar (for vim mode) in zen mode
- fix problems with markdown toc extension

--- a/config/Code/User/settings.json
+++ b/config/Code/User/settings.json
@@ -45,4 +45,10 @@
     "editor.rulers": [
         80
     ],
+    "zenMode.hideLineNumbers": false,
+    "zenMode.hideStatusBar": false,
+    "files.eol": "\n",
+    "[markdown]": {
+        "editor.tabSize": 2
+    },
 }
