vim: add vim-surround.

--- a/.gitmodules
+++ b/.gitmodules
@@ -37,3 +37,6 @@
 [submodule "zsh-syntax-highlighting"]
 	path = zsh-syntax-highlighting
 	url = https://github.com/zsh-users/zsh-syntax-highlighting.git
+[submodule "vim/pack/misc/start/vim-surround"]
+	path = vim/pack/misc/start/vim-surround
+	url = https://github.com/tpope/vim-surround.git
