--- a/gnupg/dirmngr.conf
+++ b/gnupg/dirmngr.conf
@@ -51,8 +51,8 @@
 # service, Dirmngr selects the keyserver to use depending on whether
 # Tor is locally running or not (on a per session base).
 
-keyserver hkp://jirk5u4osbsr34t5.onion
-keyserver hkps://hkps.pool.sks-keyservers.net
+keyserver hkp://zkaan2xfbuxia2wpf7ofnkbz6r5zdbbvxbunvp5g2iebopbfc4iqmbad.onion
+keyserver hkps://keys.openpgp.org
 
 # --hkp-cacert FILENAME
 #
