--- a/install/ansible/roles/zsh/tasks/main.yml
+++ b/install/ansible/roles/zsh/tasks/main.yml
@@ -17,3 +17,12 @@
     dest: ~/.zshenv
     state: link
     force: yes
+
+- name: Clone fzf
+  git:
+    repo: 'https://github.com/junegunn/fzf.git'
+    dest: ~/.fzf
+    depth: 1
+
+- name: Setup fzf
+  shell: ~/.fzf/install --no-fish --all
