--- a/install/ansible/roles/common/tasks/main.yml
+++ b/install/ansible/roles/common/tasks/main.yml
@@ -6,17 +6,14 @@
 
 - name: Install additional packages through apt
   apt:
-    name: "{{ item }}"
+    name: ['vim', 'exuberant-ctags', 'curl', 'wget', 'shellcheck', 'tmux']
     state: present
   become: true
-  with_items:
-    - vim
-    - exuberant-ctags
-    - curl
-    - wget
-    - shellcheck
-    - tmux
-    - ripgrep
+
+- name: Install ripgrep
+  apt:
+    deb: https://github.com/BurntSushi/ripgrep/releases/download/11.0.2/ripgrep_11.0.2_amd64.deb
+  become: true
 
 - name: Update dot-files repository (including submodules)
   git:
