code: set default shell, show problems in status

--- a/config/Code/User/settings.json
+++ b/config/Code/User/settings.json
@@ -49,4 +49,6 @@
         "editor.tabSize": 2
     },
     "git.untrackedChanges": "separate",
+    "terminal.integrated.shell.linux": "/bin/zsh",
+    "problems.showCurrentInStatus": true,
 }
